--- a/package.json
+++ b/package.json
@@ -32,21 +32,21 @@
   ],
   "license": "MIT",
   "devDependencies": {
-    "@babel/core": "~7.8.4",
+    "@babel/core": "^7.8.7",
     "@babel/plugin-proposal-class-properties": "~7.8.3",
     "@babel/plugin-proposal-export-default-from": "~7.8.3",
-    "@babel/polyfill": "~7.8.3",
-    "@babel/preset-env": "~7.8.4",
-    "@babel/register": "~7.8.3",
+    "@babel/polyfill": "^7.8.7",
+    "@babel/preset-env": "^7.8.7",
+    "@babel/register": "^7.8.6",
     "babel-loader": "~8.0.6",
     "eslint": "^6.8.0",
-    "eslint-plugin-import": "~2.20.1",
-    "nyc": "^15.0.0",
+    "eslint-plugin-import": "^2.20.2",
+    "nyc": "^15.1.0",
     "tap-min": "~2.0.0",
-    "tape": "^4.13.0",
-    "uglifyjs-webpack-plugin": "~2.2.0",
-    "webpack": "^4.41.5",
+    "tape": "^4.13.3",
+    "terser-webpack-plugin": "^4.1.0",
+    "webpack": "^4.44.1",
     "webpack-auto-inject-version": "^1.2.2",
-    "webpack-command": "~0.5.0"
+    "webpack-cli": "^3.3.12"
   }
 }
